# Yale_CELI_List_Parser

./: .env.example  .flake8  README.md  Yale_CELI_List_of_Companies_Leaving_and_Staying_in_Russia.csv  pyproject.toml  requirements.txt
bot/: __main__.py  config.py
